--- a/client/src/components/chat-page/styles.scss
+++ b/client/src/components/chat-page/styles.scss
@@ -1,16 +1,16 @@
 .chat-page {
   margin: 0;
-  background: rgb(0, 0, 0);
-  color: white;
+  background: white;
+  color: black;
   display: flex;
   justify-content: center;
 
   height: 100vh;
 
   .rooms {
-    background-color: rgb(85, 85, 46);
+    background-color: rgb(221, 221, 136);
   }
   .chat {
-    background-color: rgb(34, 34, 124);
+    background-color: rgb(102, 102, 230);
   }
 }
