--- a/client/src/components/room-sidebar/styles.scss
+++ b/client/src/components/room-sidebar/styles.scss
@@ -4,5 +4,6 @@
   flex-direction: column;
   align-items: center;
 
-  border-right: 1px solid #aaa;
+  padding: 0 2rem;
+  // border-right: 1px solid #aaa;
 }
