--- a/client/src/components/user-sidebar/styles.scss
+++ b/client/src/components/user-sidebar/styles.scss
@@ -1,6 +1,7 @@
 .user-sidebar {
   height: 100%;
 
-  padding: 1rem 2rem;
-  border-left: 1px solid #aaa;
+  // padding: 1rem 2rem;
+  padding: 0 1rem;
+  // border-left: 1px solid #aaa;
 }
