--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,30 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: #ffc700;
+  background: -webkit-linear-gradient(45deg, #ff1f01, #fd5d1b, #ffc700);
+  background: linear-gradient(45deg, #ff1f01, #fd5d1b, #ffc700); */
+  background-image: linear-gradient(
+    135deg,
+    #8af0ff 0,
+    #60dafe 25%,
+    #0cc1ed 50%,
+    #00a9dc 75%,
+    #0093cd 100%
+  );
+}
+
+button.primary {
+  background-color: #333333;
+  color: white;
+  outline: none;
+  border: none;
+  padding: 0.6rem 1.3rem;
+  border-radius: 0.5rem;
+  /* text-transform: uppercase; */
+  font-weight: bold;
+  font-family: "Comfortaa";
+  cursor: pointer;
 }
 
 code {
