--- a/client/src/pages/start-page/styles.scss
+++ b/client/src/pages/start-page/styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: calc(100% - 70px);
   font-family: "Comfortaa";
 
   .log-in {
