--- a/client/src/components/chat/styles.scss
+++ b/client/src/components/chat/styles.scss
@@ -1,42 +1,56 @@
 .chat {
+  height: 80%;
+  overflow-y: hidden;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 0 0 1.5rem 1.5rem;
+  box-shadow: 4px 8px 25px rgba(0, 0, 0, 0.5);
+  background: #55555590;
   padding: 0 2rem;
+  // margin: 2rem 0;
 
-  .chat-header {
-  }
-
-  .messages {
+  .chat-container {
+    position: absolute;
+    left: 0;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    list-style-type: none;
-    margin: 0;
-    padding: 1rem 0;
+    justify-content: flex-end;
+    // padding: 2.5rem;
+    // margin-bottom: 4rem;
 
-    .message-box {
-      max-width: 70%;
-      background-color: #f2eaec;
-      padding: 1rem;
-      border-radius: 0.5rem;
-      margin: 0.5rem;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
 
-      &.my-message {
-        background-color: #0ce5e1;
-        margin-left: auto;
+    ::-webkit-scrollbar {
+      display: none; /* Safari and Chrome */
+    }
+
+    .messages {
+      height: inherit;
+      overflow-y: scroll;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      list-style-type: none;
+      margin: 0;
+      padding: 2rem;
+    }
+
+    .input-container {
+      width: 100%;
+
+      input {
+        border-radius: 0rem !important;
       }
 
-      .author {
-        display: flex;
-        justify-content: space-between;
-        color: #555;
+      button {
+        border-radius: 0rem !important;
       }
     }
-  }
-
-  .input-container {
-    width: 100%;
   }
 }
