--- a/client/src/components/room-sidebar/styles.scss
+++ b/client/src/components/room-sidebar/styles.scss
@@ -2,8 +2,15 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
 
-  padding: 0 2rem;
-  // border-right: 1px solid #aaa;
+  .sidebar-header {
+    backdrop-filter: saturate(1.5) brightness(80%);
+    border-radius: 0 0 0 0.5rem;
+
+    padding: 0 2rem;
+  }
+
+  .sidebar-content {
+    padding: 0.5rem 2rem;
+  }
 }
