--- a/client/src/components/user-sidebar/styles.scss
+++ b/client/src/components/user-sidebar/styles.scss
@@ -1,7 +1,12 @@
 .user-sidebar {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
-  // padding: 1rem 2rem;
-  padding: 0 1rem;
-  // border-left: 1px solid #aaa;
+  .sidebar-header {
+    backdrop-filter: saturate(1.5) brightness(80%);
+    border-radius: 0 0 0.5rem 0;
+    padding: 0 2rem;
+    margin-bottom: 0.5rem;
+  }
 }
