finished user-list color styling

--- a/client/src/components/user-list/styles.scss
+++ b/client/src/components/user-list/styles.scss
@@ -13,12 +13,12 @@
       border-radius: 0.3rem;
       // backdrop-filter: brightness(200%) ;
       // backdrop-filter: hue-rotate(120deg);
-      backdrop-filter: invert(40%);
+      backdrop-filter: invert(20%) brightness(80%) saturate(120%);
       .status {
         width: 10px;
         height: 10px;
         border-radius: 999rem;
-        background-color: green;
+        background-color: rgb(5, 150, 5);
         display: inline-block;
         margin-right: 0.5rem;
       }
