Co-authored-by: adam.kjall@medieinstitutet.se <adam.kjall@medieinstitutet.se> Co-authored-by: David Jensen <Tsourdox@icloud.com>

--- a/client/src/components/message/styles.scss
+++ b/client/src/components/message/styles.scss
@@ -1,6 +1,6 @@
 .message {
   max-width: 70%;
-  background-color: #f2eaec;
+  background-color: rgb(218, 218, 218);
   padding: 1rem;
   border-radius: 0.5rem;
   margin: 0.5rem 0;
