--- a/client/src/components/input-box/styles.scss
+++ b/client/src/components/input-box/styles.scss
@@ -14,6 +14,10 @@
     display: flex;
     flex-wrap: nowrap;
 
+    .api-help-box {
+      background-color: white;
+    }
+
     .input {
       flex-grow: 1;
       outline: none;
