--- a/client/src/components/input-box/styles.scss
+++ b/client/src/components/input-box/styles.scss
@@ -16,6 +16,11 @@
 
     .api-help-box {
       background-color: white;
+      padding-left: 0.7rem;
+      padding-top: 0.3rem;
+      margin: 0;
+      font-size: 0.8rem;
+      font-style: italic;
     }
 
     .input {
