--- a/client/src/components/input-box-room/styles1.scss
+++ b/client/src/components/input-box-room/styles1.scss
@@ -16,12 +16,30 @@
     flex-direction: column;
 
     input {
-      flex-grow: 1;
       outline: none;
       border: none;
       padding: 1rem 0.7rem;
       // border-radius: 0.5rem 0 0 0.5rem;
     }
+
+    .input-new-room {
+      border-radius: 0.5rem 0.5rem 0 0;
+    }
+
+    .checkbox-label {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      padding: 0.3rem 0;
+      backdrop-filter: brightness(80%);
+
+      .checkbox {
+        width: 1.1rem;
+        height: 1.1rem;
+      }
+    }
+
     label {
       font-size: 0.6rem;
       align-self: flex-start;
@@ -34,9 +52,6 @@
       padding-top: 0em;
       padding-bottom: 0.3em;
       padding-left: 0.3em;
-    }
-    input.checkbox {
-      margin-right: 0.5em;
     }
 
     button.btn.primary {
