--- a/client/src/pages/start-page/styles.scss
+++ b/client/src/pages/start-page/styles.scss
@@ -1,6 +1,6 @@
 .start-page {
   margin: 0;
-  color: white;
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,8 +8,8 @@
   font-family: "Comfortaa";
 
   .log-in {
-    border: 5px solid yellow;
-    background-color: black;
+    border: 5px solid black;
+    background-color: rgba(255, 255, 255, 0.452);
     padding: 1rem;
     border-radius: 20px;
     display: flex;
@@ -18,7 +18,7 @@
 
     h1 {
       font-size: 4rem;
-      color: yellow;
+      color: Black;
       font-family: "Comfortaa";
     }
     h5 {
@@ -28,18 +28,19 @@
       position: "relative";
       color: white;
       font-size: 1rem;
-      background-color: rgb(0, 0, 0);
-      border: 3px solid yellow;
+      background-color: rgba(0, 0, 0, 0.473);
+      border: 3px solid black;
       padding: 0.5rem;
       display: inline-block;
       border-radius: 10em;
+      outline: none;
     }
     button {
       margin-top: 1rem;
       color: black;
       font-size: 1rem;
-      background-color: yellow;
-      border: 3px solid yellow;
+      background-color: white;
+      border: 3px solid black;
       padding: 0.5rem;
       border-radius: 10em;
     }
